[gd_scene load_steps=5 format=3 uid="uid://broi4uqvo8xf2"]

[ext_resource type="Script" path="res://Michael WIP/Scenes/HeroUIPanel.gd" id="1_52fgw"]
[ext_resource type="Texture2D" uid="uid://kjhjksp483uo" path="res://Michael WIP/MikeCrushSheet.png" id="2_4du70"]
[ext_resource type="PackedScene" uid="uid://4ykfble4676d" path="res://Michael WIP/GoodScenes/Random_Hero_UI.tscn" id="2_awdne"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_63y8u"]
size = Vector2(32, 32)

[node name="HeroUIPanel" type="Control"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
script = ExtResource("1_52fgw")
metadata/_edit_group_ = true

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRectMage" type="NinePatchRect" parent="Panel"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -24.0
offset_right = 24.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_4du70")
region_rect = Rect2(4, 4, 54, 54)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_63y8u")

[node name="HeroUI" parent="." instance=ExtResource("2_awdne")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
